# Stratus

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
docker/devrag/: Dockerfile
plugin/.claude-plugin/: plugin.json
plugin/agents/: architecture-guide.md  delivery-architecture-guide.md  delivery-backend-engineer.md  delivery-database-engineer.md  delivery-debugger.md  delivery-documentation-engineer.md  delivery-frontend-engineer.md  delivery-implementation-expert.md  delivery-mobile-engineer.md  delivery-performance-engineer.md  (+15 more)
scripts/: install.sh  uninstall.sh
tests/: conftest.py  test_agent_tracker.py  test_analytics.py  test_analytics_db.py  test_analytics_models.py  test_analytics_routes.py  test_analyzer.py  test_app.py  test_artifacts.py  test_ast_analyzer.py  test_bootstrap_detector.py  test_bootstrap_models.py  test_bootstrap_writer.py  test_cli.py  test_commands.py  test_config.py  test_coordinator.py  test_dashboard_routes.py  test_database.py  test_delegation_guard.py  test_delivery_commands.py  test_delivery_config.py  test_delivery_coordinator.py  test_delivery_dispatch.py  test_delivery_models.py  test_delivery_routes.py  test_delivery_state.py  test_desktop_setup.py  test_detector.py  test_devrag.py  test_embed_cache.py  test_file_checker.py  test_git_analyzer.py  test_governance_store.py  test_heuristics.py  test_hooks.py  test_index_state.py  test_invariant_validation.py  test_invariants.py  test_learning_commands.py  (+65 more)
(+179 files in other folders)
