[project]
name = "stratus"
version = "0.1.0"
description = "Open-source framework for Claude Code sessions"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    {name = "Better Claude Contributors"},
]
keywords = ["claude", "ai", "framework", "mcp", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
readme = "README.md"
dependencies = [
    "mcp>=1.20",
    "httpx>=0.27",
]

[project.scripts]
stratus = "stratus.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stratus"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.9.0",
    "basedpyright>=1.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that use real transcript files (deselect with '-m \"not integration\"')",
    "unit: marks unit tests",
]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportAny = false
reportUnusedCallResult = false

[tool.coverage.run]
source = ["stratus"]

[tool.coverage.report]
fail_under = 80
show_missing = true
